updated to JDK17 and gradle 7.4