@@ -1,7 +1,6 @@
 /*
  * This file was generated by the Gradle 'init' task.
  */
-
 plugins {
     id 'java'
     id 'maven-publish'
@@ -10,6 +9,16 @@ plugins {
 }
 apply plugin: "io.spring.dependency-management"
 
+// Explicitly set the main class to avoid ASM version issues with JDK 17
+bootJar {
+    mainClassName = 'ServerApplication'
+}
+
+// Alternative syntax for newer Gradle versions
+springBoot {
+    mainClassName = 'ServerApplication'
+}
+
 repositories {
     mavenLocal()
     maven {
@@ -17,7 +26,7 @@ repositories {
     }
     maven {
         url = uri('https://mifos.jfrog.io/artifactory/phee-gradle-local')
-    }    
+    }
     maven {
         url = uri('https://mifos.jfrog.io/artifactory/mifosx-gradle-local')
     }
@@ -58,13 +67,19 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
-
 }
 
 group = 'org.apache.fineract'
-version = '1.0.0-SNAPSHOT'
-sourceCompatibility = '11'
+version = 'gazelle-1.1.0'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+        vendor = JvmVendorSpec.ADOPTIUM // or ORACLE, AMAZON, etc.
+    }
+}
 
 sourceSets {
     generated {
@@ -85,4 +100,9 @@ publishing {
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
     options.annotationProcessorGeneratedSourcesDirectory = file("src/generated/java")
+    options.release = 17
+    options.compilerArgs.addAll([
+        '-parameters',
+        '--enable-preview' // Remove this if you don't need preview features
+    ])
 }
